# homework_module_4

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_main_py.html
tasks/: task_14_1  task_14_2  task_15_1  task_16_1  task_16_2
tests/: conftest.py  test_main.py
